# RustFlasher

./: Cargo.toml  README.md  config.toml
src/: main.rs
src/serial_utils/: mod.rs
