[package]
name = "RustFlasher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-table = "0.4.7"
config = "0.13.4"
libudev-sys = "0.1.4"
serial_enumerator = "0.2.12"
serialport = "4.3.0"
slint = "1.3.2"
strfmt = "0.2.4"
